# kubefed

./: .gitignore  .golangci.yml  .travis.yml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.controller  Gopkg.toml  Makefile  OWNERS  PROJECT  README.md  SECURITY_CONTACTS  boilerplate.go.txt  go.mod  go.sum  imagebuild.sh  kubefedctl.spec
.github/: PULL_REQUEST_TEMPLATE.md
charts/: index.yaml
config/: config.yaml  federationconfig.yaml  kubefedconfig.yaml
defs/: build.bzl
docs/: OWNERS  cluster-registration.md  concepts.md  development.md  federating_crds.md  ingress-service-dns-with-coredns.md  ingressdns-with-externaldns.md  installation.md  propagation-rbac-for-member-clusters.md  releasing.md  servicedns-with-externaldns.md  userguide.md
go/: sdk_versions.bzl
hack/: doc.go  imports.go  install-latest.yaml  update-deps.sh  update-gofmt.sh  verify-docfiles.sh  verify-errpkg.sh  verify-golangci-lint.sh  verify-klog.sh
openshift/: Dockerfile  Makefile.ci
pkg/: doc.go
sample/: federatedcluster.yaml  federatedconfigmap.yaml  federatedconfigmapoverride.yaml  federatedconfigmapplacement.yaml  federateddeployment.yaml  federateddeploymentoverride.yaml  federateddeploymentplacement.yaml  federatedjob.yaml  federatednamespace.yaml  federatednamespaceplacement.yaml  federatedreplicaset.yaml  federatedreplicasetoverride.yaml  federatedreplicasetplacement.yaml  federatedsecret.yaml  federatedsecretoverride.yaml  federatedsecretoverrides.yaml  federatedsecretplacement.yaml  federatedservice.yaml  federatedserviceplacement.yaml  (+6 more)
tools/: go.mod  (+2 more)
(+1335 files in other folders)
